--- a/trunk/src/log4j.properties
+++ b/trunk/src/log4j.properties
@@ -4,13 +4,14 @@ log4j.appender.stdout.Target=System.out
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
 #log4j.appender.stdout.layout.ConversionPattern=%5r [%t] %-5p %c - %m%n
 log4j.appender.stdout.layout.ConversionPattern=%d{ABSOLUTE} [%5p] %c{1}:%L - %m%n
-log4j.rootLogger=debug, stdout
+log4j.rootLogger=WARN, stdout
+
 
 log4j.logger.ui.mvc.api=WARN
 log4j.logger.ui.mvc=WARN
 log4j.logger.ui.input=WARN
 
-log4j.logger.ui.gui=DEBUG
-log4j.logger.ui.mvc.GuiController=DEBUG
+#log4j.logger.ui.gui=DEBUG
+#log4j.logger.ui.mvc.GuiController=DEBUG
 
-lgo4j.logger.opengl=WARN
+lgo4j.logger.vis.opengl=WARN
