added display lists for better performance fixed link bug

--- a/trunk/src/log4j.properties
+++ b/trunk/src/log4j.properties
@@ -14,4 +14,6 @@ log4j.logger.ui.input=WARN
 #log4j.logger.ui.gui=DEBUG
 #log4j.logger.ui.mvc.GuiController=DEBUG
 
-lgo4j.logger.vis.opengl=WARN
+log4j.logger.vis.opengl=WARN
+
+log4j.logger.vidis.ui.Startup=INFO
