--- a/trunk/src/log4j.properties
+++ b/trunk/src/log4j.properties
@@ -6,6 +6,7 @@ log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
 log4j.appender.stdout.layout.ConversionPattern=%d{ABSOLUTE} [%5p] %c{1}:%L - %m%n
 log4j.rootLogger=WARN, stdout
 
+log4j.logger.ui.vis.shader.ShaderFactory=DEBUG
 
 log4j.logger.ui.mvc.api=WARN
 log4j.logger.ui.mvc=WARN
