--- a/trunk/src/log4j.properties
+++ b/trunk/src/log4j.properties
@@ -12,6 +12,7 @@ log4j.logger.ui.mvc.api=WARN
 log4j.logger.ui.mvc=WARN
 log4j.logger.ui.input=WARN
 
+log4j.logger.ui.model.impl.guielements.Basic3DScrollPane=DEBUG
 #log4j.logger.ui.gui=DEBUG
 #log4j.logger.ui.mvc.GuiController=DEBUG
 
