added debug output for SimNode, send/receive packet is now traceable

--- a/src/log4j.properties
+++ b/src/log4j.properties
@@ -19,3 +19,5 @@ log4j.logger.ui.model.impl.guielements.Basic3DScrollPane=DEBUG
 log4j.logger.vis.opengl=WARN
 
 log4j.logger.vidis.ui.Startup=INFO
+
+log4j.logger.vidis.data.sim.SimNode=DEBUG
