tested with more modules

--- a/src/log4j.properties
+++ b/src/log4j.properties
@@ -20,4 +20,4 @@ log4j.logger.vis.opengl=WARN
 
 log4j.logger.vidis.ui.Startup=INFO
 
-log4j.logger.vidis.data.sim.SimNode=DEBUG
+log4j.logger.vidis.data.sim.SimNode=WARN
