--- a/src/log4j.properties
+++ b/src/log4j.properties
@@ -4,20 +4,20 @@ log4j.appender.stdout.Target=System.out
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
 #log4j.appender.stdout.layout.ConversionPattern=%5r [%t] %-5p %c - %m%n
 log4j.appender.stdout.layout.ConversionPattern=%d{ABSOLUTE} [%5p] %c{1}:%L - %m%n
-log4j.rootLogger=WARN, stdout
-
-log4j.logger.ui.vis.shader.ShaderFactory=DEBUG
-
-log4j.logger.ui.mvc.api=WARN
-log4j.logger.ui.mvc=WARN
-log4j.logger.ui.input=WARN
-
-log4j.logger.ui.model.impl.guielements.Basic3DScrollPane=DEBUG
-#log4j.logger.ui.gui=DEBUG
-#log4j.logger.ui.mvc.GuiController=DEBUG
-
-log4j.logger.vis.opengl=WARN
-
-log4j.logger.vidis.ui.Startup=INFO
-
-log4j.logger.vidis.data.sim.SimNode=WARN
+log4j.rootLogger=INFO, stdout
+#
+#log4j.logger.ui.vis.shader.ShaderFactory=DEBUG
+#
+#log4j.logger.ui.mvc.api=WARN
+#log4j.logger.ui.mvc=WARN
+#log4j.logger.ui.input=WARN
+#
+#log4j.logger.ui.model.impl.guielements.Basic3DScrollPane=DEBUG
+##log4j.logger.ui.gui=DEBUG
+##log4j.logger.ui.mvc.GuiController=DEBUG
+#
+#log4j.logger.vis.opengl=WARN
+#
+#log4j.logger.vidis.ui.Startup=INFO
+#
+#log4j.logger.vidis.data.sim.SimNode=WARN
