some bugfixes in the graph layout stuff

--- a/src/log4j.properties
+++ b/src/log4j.properties
@@ -5,6 +5,8 @@ log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
 #log4j.appender.stdout.layout.ConversionPattern=%5r [%t] %-5p %c - %m%n
 log4j.appender.stdout.layout.ConversionPattern=%d{ABSOLUTE} [%5p] %c{1}:%L - %m%n
 log4j.rootLogger=INFO, stdout
+
+log4j.vidis.ui.model.graph=DEBUG
 #
 #log4j.logger.ui.vis.shader.ShaderFactory=DEBUG
 #
