--- a/trunk/build.xml
+++ b/trunk/build.xml
@@ -29,6 +29,7 @@
 		<property name="vidis.src" value="${basedir}${path-spacer}src" />
 		<property name="vidis.bin" value="${basedir}${path-spacer}bin" />
 		<property name="vidis.doc" value="${basedir}${path-spacer}doc" />
+		<property name="vidis.doc.javadoc" value="${vidis.doc}${path-spacer}javadoc" />
 		<property name="vidis.lib" value="${basedir}${path-spacer}lib" />
 		<property name="vidis.builds" value="${basedir}${path-spacer}builds" />
 		
@@ -64,7 +65,7 @@
     </target>
 	
 	<target name="init-javadoc" depends="prepare,output-system-properties">
-		<mkdir dir="${vidis.doc}" />
+		<mkdir dir="${vidis.doc.javadoc}" />
 		<echo message="OK" />
 	</target>
 	
@@ -76,7 +77,7 @@
 	
 	<!-- target clean javadoc -->
 	<target name="clean-javadoc" depends="prepare">
-		<delete dir="${vidis.doc}" failonerror="true" verbose="true" />
+		<delete dir="${vidis.doc.javadoc}" failonerror="true" verbose="true" />
 		<echo message="OK" />
 	</target>
 	
@@ -86,17 +87,12 @@
 	</target>
 	
 	<!-- target javadoc BUGGY -->
-	<target name="javadoc" description="Generates javadoc" depends="clean-javadoc,init-javadoc">
-		<javadoc
-			packagenames="*"
-			destdir="${vidis.doc}"
-			version="true"
-			author="true"
-			sourcepath="${vidis.src}"
-			classpathref="vidis.classpath"
-		>
-		</javadoc>
-	</target>
+	<target name="javadoc" depends="clean-javadoc,init-compile, init-javadoc">
+	        <javadoc access="package" author="true" classpathref="vidis.classpath" destdir="doc/javadoc" nodeprecated="false" nodeprecatedlist="false" noindex="false" nonavbar="false" notree="false" packagenames="vidis.ui.vis,vidis.ui.vis.objects,vidis.ui.model.graph.layouts.impl,vidis.util.graphs.util,vidis.data,vidis.data.mod,vidis.util.graphs.graph.algorithm,vidis.modules.vartest,vidis.ui.mvc,vidis.ui.gui,vidis.sim.xml.modules,vidis.modules.vectorClockAlgorithm,vidis.ui.model.graph.layouts,vidis.aspects,vidis.modules.bullyElectionAlgorithm,vidis.glutils,vidis.ui.mvc.api,vidis.data.sim,vidis.ui.vis.shader.variable,vidis.ui.vis.multipass,vidis.ui.vis.shader.impl,vidis.ui.model.impl.guielements,vidis.ui.vis.camera,vidis.ui.config,vidis.util,vidis.ui.input,vidis.sim.xml,vidis.ui,vidis.data.annotation,vidis.modules.demo,vidis.util.graphs.graph,vidis.util.graphs,vidis.sim.xml.modules.dataStructure,vidis.modules.flooding,vidis.ui.model.structure,vidis.ui.model.impl,vidis.data.var.vars,vidis.data.var,vidis.sim,vidis.ui.vis.shader,vidis.ui.events,vidis.sim.exceptions" source="1.5" sourcepath="src" splitindex="true" use="true" version="true">
+	            <link href="${vidis.doc.javadoc}"/>
+	            <link href="http://java.sun.com/javase/6/docs/api/"/>
+	        </javadoc>
+	    </target>
 	
 	<!-- target jar -->
 	<target name="jar" description="This task creates a jar executable of the current build." depends="compile">
