added 2d labels ( see Vartest for running example )

--- a/src/log4j.properties
+++ b/src/log4j.properties
@@ -7,6 +7,7 @@ log4j.appender.stdout.layout.ConversionPattern=%d{ABSOLUTE} [%5p] %c{1}:%L - %m%
 log4j.rootLogger=INFO, stdout
 
 log4j.vidis.ui.model.graph=DEBUG
+log4j.vidis.ui.gui=DEBUG
 #
 #log4j.logger.ui.vis.shader.ShaderFactory=DEBUG
 #
