--- a/Theses/trunk/build.xml
+++ b/Theses/trunk/build.xml
@@ -2,8 +2,9 @@
 <project basedir="." default="compile" name="Vidis">
 	<target name="compile">
 		<echo message="${os.name}" />
-		<exec dir="." executable="cmd" os="Windows NT,Windows XP,Windows 2000">
-		  <arg line="/c fop_alone.bat"/>
+		<exec dir="." executable="cmd" os="Windows XP">
+			<arg value="/c" />
+			<arg value="fop -xml src/vidis_thesis.xml -xsl stylesheet.xsl -pdf bin/vidis_thesis.pdf" />
 		</exec>
 	</target>
 </project>
