--- a/Theses/trunk/build.xml
+++ b/Theses/trunk/build.xml
@@ -2,7 +2,7 @@
 <project basedir="." default="compile" name="Vidis">
 	<target name="compile">
 		<echo message="${os.name}" />
-		<exec dir="." executable="cmd" os="Windows XP">
+		<exec dir="." executable="cmd" os="Windows XP, Windows Vista">
 			<arg value="/c" />
 			<arg value="fop -xml src/vidis_thesis.xml -xsl stylesheet.xsl -pdf bin/vidis_thesis.pdf" />
 		</exec>
