classpath changes for javancss

--- a/.classpath
+++ b/.classpath
@@ -7,6 +7,9 @@
 	<classpathentry kind="lib" path="lib/jogl-1.1.1/gluegen-rt.jar" sourcepath="lib/jogl-1.1.1/jogl-1.1.1-src.zip"/>
 	<classpathentry kind="lib" path="lib/jogl-1.1.1/jogl.jar" sourcepath="lib/jogl-1.1.1/jogl-1.1.1-src.zip"/>
 	<classpathentry kind="lib" path="lib/log4j/log4j-1.2.15.jar"/>
+	<classpathentry kind="lib" path="lib/javancss29.50/ccl.jar"/>
+	<classpathentry kind="lib" path="lib/javancss29.50/javancss.jar"/>
+	<classpathentry kind="lib" path="lib/javancss29.50/jhbasic.jar"/>
 	<classpathentry kind="con" path="org.eclipse.ajdt.core.ASPECTJRT_CONTAINER"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
