--- a/trunk/build.xml
+++ b/trunk/build.xml
@@ -1,4 +1,11 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
+<!--
+	VIDIS is a simulation and visualisation framework for distributed systems.
+	Copyright (C) 2009 Dominik Psenner, Christoph Caks
+	This program is free software; you can redistribute it and/or modify it under the terms of the GNU General Public License as published by the Free Software Foundation; either version 3 of the License, or (at your option) any later version.
+	This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for more details.
+	You should have received a copy of the GNU General Public License along with this program; if not, see <http://www.gnu.org/licenses/>.
+-->
 <project basedir="." default="compile" name="Vidis">
 	
 	<target name="prepare" depends="get-os-properties,set-system-properties,set-vidis-properties" description="Retrieve global required data.">
