--- a/build.xml
+++ b/build.xml
@@ -146,7 +146,7 @@
 				optimize="false"
 		>
 			<!-- compiler flags to show/hide deprecation,unchecked information -->
-			<compilerarg line=" -Xlint:deprecation -Xlint:unchecked" />
+			<!--<compilerarg line=" -Xlint:deprecation -Xlint:unchecked" />-->
 		</javac>
 		<echo message="OK" />
 	</target>
